# git-tribe

./: .gitignore  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md
src/git_tribe/: __init__.py  __main__.py  cli.py  config.py
src/git_tribe/analyzers/: __init__.py  blame_analyzer.py  diff_analyzer.py  log_analyzer.py
src/git_tribe/metrics/: __init__.py  bus_factor.py  ownership.py  silos.py  turnover.py
src/git_tribe/output/: codeowners.py  csv_output.py  json_output.py  markdown_output.py  terminal.py
tests/: conftest.py  test_cli.py
tests/analyzers/: test_blame_analyzer.py  test_diff_analyzer.py  test_log_analyzer.py
tests/metrics/: test_bus_factor.py  test_ownership.py  test_silos.py
